# twitterBot

./: .gitignore  LICENSE  README.md
C/: CMakeLists.txt  CMakeSettings.json  Database.c  Database.h  config.c  config.h  database.xml  generateWindow.bat  main.c  makeTweet.bat  sample.xml  xmlWrapper.c  xmlWrapper.h
C/Utils/: CMakeLists.txt  CurlWrapper.c  CurlWrapper.h  Utils.c  Utils.h  xmlWrapper.c  xmlWrapper.h
